--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.15.3",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
+    "jquery-smooth-scroll": "^2.2.0",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
