--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,9 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=mandrill
 MAIL_FROM_NAME=
-MAIL_FROM_ADDRESS=
+MAIL_FROM_HELLO="hello@codegent.com"
+MAIL_FROM_PRODUCTS="jobs@codegent.com"
+MAIL_FROM_AGENCY="jobs@thinmartian.com"
 MANDRILL_SECRET=
 
 PUSHER_APP_ID=
