Image uploads added

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ MAIL_FROM_PRODUCTS="jobs@codegent.com"
 MAIL_FROM_AGENCY="jobs@thinmartian.com"
 MANDRILL_SECRET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+CDN_URL=
+AWS_KEY=
+AWS_SECRET=
+AWS_REGION=
+AWS_BUCKET=
