Start of blog frontend and some other changes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "axios": "^0.15.3",
     "bootstrap-sass": "^3.3.7",
+    "chosen-js": "^1.7.0",
     "cross-env": "^3.2.3",
     "jquery": "^3.2.1",
     "jquery-smooth-scroll": "^2.2.0",
