--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "graham-campbell/markdown": "^7.1",
         "guzzlehttp/guzzle": "^6.2",
         "intervention/image": "^2.3",
         "laravel/framework": "5.4.*",
