Site nearly done

--- a/.env.example
+++ b/.env.example
@@ -25,13 +25,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=mandrill
-MAIL_FROM_NAME=
+MAIL_FROM_NAME="Codegent"
 MAIL_FROM_HELLO="hello@codegent.com"
 MAIL_FROM_PRODUCTS="jobs@codegent.com"
 MAIL_FROM_AGENCY="jobs@thinmartian.com"
 MANDRILL_SECRET=
 
-CDN_URL=
+CDN_URL=https://d2aeaz3rf1fwmv.cloudfront.net/www/
 AWS_KEY=
 AWS_SECRET=
 AWS_REGION=
