--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/js/app.js": "/js/app.1ab56fc2fa3bd166ee19.js",
-  "/css/app.css": "/css/app.84a83faab09e01fe0adb533afe380382.css",
-  "/js/admin.js": "/js/admin.160e0535bfb30a784299.js"
+  "/js/app.js": "/js/app.js",
+  "/css/app.css": "/css/app.css",
+  "/js/admin.js": "/js/admin.js"
 }
