--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/js/app.js": "/js/app.js",
-  "/css/app.css": "/css/app.css",
-  "/js/admin.js": "/js/admin.js"
+  "/js/app.js": "/js/app.a207727ef6aa295bbb89.js",
+  "/css/app.css": "/css/app.4498c8ffa21ed99ffe662eaac301e312.css",
+  "/js/admin.js": "/js/admin.160e0535bfb30a784299.js"
 }
